# glm_hmm_notebook

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: 01_ashwood_replication.ipynb  01_ashwood_replication.py  02_glm_hmm_notebook_draft.ipynb  ONE_playground.ipynb  ashwood_preprocessing_utils.py  ashwood_replication.ipynb  data_download.py  equivalent_code_for_design_matrix.py  ibl_preprocessing.ipynb  ibl_preprocessing.py  insert_nans.py  notebook_utils.py  plot_07_glm_hmm_behavioral.ipynb  ssm_input.npz
scripts/IBL/: CSHL_008_session_fold_lookup.npz
