[project]
name = "glm-hmm-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brainbox>=0.0.9",
    "ipykernel>=7.1.0",
    "ipympl>=0.10.0",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "numpy<=2.3.5",
    "seaborn>=0.13.2",
]
